// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tasks reducer: should handle addTaskSuccess action 1`] = `
Immutable.List [
  Immutable.Map {
    "message": "the request has succeeded",
    "data": Immutable.Map {
      "id": "5a7f136331a5d90001271638",
      "message": "Hello",
      "completed": false,
      "favorite": false,
      "created": "2018-02-10T15:44:35.284Z",
    },
  },
  Immutable.Map {
    "id": "5a7f136231a5d90001271637",
    "message": "Hello!",
    "completed": true,
    "favorite": false,
    "created": "2018-02-10T15:44:34.624Z",
    "modified": "2018-02-10T16:01:12.406Z",
  },
  Immutable.Map {
    "id": "5a7f136131a5d90001271636",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:33.675Z",
  },
  Immutable.Map {
    "id": "5a7f136031a5d90001271635",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:32.959Z",
  },
]
`;

exports[`tasks reducer: should handle chooseAllTasksSuccess action 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "5a7f136231a5d90001271637",
    "message": "Hello!",
    "completed": true,
    "favorite": false,
    "created": "2018-03-10T15:44:34.624Z",
    "modified": "2018-04-10T16:01:12.406Z",
  },
  Immutable.Map {
    "id": "5a7f136131a5d90001271636",
    "message": "Hello",
    "completed": true,
    "favorite": false,
    "created": "2018-02-10T15:44:33.675Z",
    "modified": "2018-04-10T16:01:12.406Z",
  },
  Immutable.Map {
    "id": "5a7f136031a5d90001271635",
    "message": "Hello",
    "completed": true,
    "favorite": false,
    "created": "2018-02-10T15:44:32.959Z",
    "modified": "2018-04-10T16:01:12.406Z",
  },
]
`;

exports[`tasks reducer: should handle deleteTaskSuccess action 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "5a7f136131a5d90001271636",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:33.675Z",
  },
  Immutable.Map {
    "id": "5a7f136031a5d90001271635",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:32.959Z",
  },
]
`;

exports[`tasks reducer: should handle editTaskSuccess action 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "5a7f136231a5d90001271637",
    "message": "Hello!",
    "completed": true,
    "favorite": false,
    "created": "2018-02-10T15:44:34.624Z",
    "modified": "2018-02-10T16:01:12.406Z",
  },
  Immutable.Map {
    "id": "5a7f136131a5d90001271636",
    "message": "test update",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:33.675Z",
    "modified": "2018-02-10T16:01:12.406Z",
  },
  Immutable.Map {
    "id": "5a7f136031a5d90001271635",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:32.959Z",
  },
]
`;

exports[`tasks reducer: should handle fetchTasksSuccess action 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "5a7f136231a5d90001271637",
    "message": "Hello!",
    "completed": true,
    "favorite": false,
    "created": "2018-02-10T15:44:34.624Z",
    "modified": "2018-02-10T16:01:12.406Z",
  },
  Immutable.Map {
    "id": "5a7f136131a5d90001271636",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:33.675Z",
  },
  Immutable.Map {
    "id": "5a7f136031a5d90001271635",
    "message": "Hello",
    "completed": false,
    "favorite": false,
    "created": "2018-02-10T15:44:32.959Z",
  },
]
`;

exports[`tasks reducer: should return initial state 1`] = `Immutable.List []`;
